# quicker

./: .gitignore  README.md  TODO.todo  docker-compose.yaml  pyproject.toml  quicker.py
quicker/: __init__.py  main.py
