[tool.poetry]
name = "quicker"
version = "0.1.0"
description = "Query databases quickly."
authors = ["ge <ge@nixhacks.net>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^1.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"